# GTKLearning

./: CMakeLists.txt  Unsaved 1.glade
icon/: icon1.xcf  icon2.xcf
src/: main.cpp  main.hpp
